@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.3.0 (pending)
 ==========================
 
+- Ignore key press events from graph widgets with focus
 - Switch logger display to QPlainTextEdit for performance
 
 Release 0.2.2 (pending)
